Overflow-x issue mobile

--- a/frontend/src/components/styles/UserList.css
+++ b/frontend/src/components/styles/UserList.css
@@ -7,6 +7,7 @@
     align-items: center;
     padding: 10px;
     background-color: #EFF2EF;
+    overflow-x: hidden;
 }
 
 .user-list ul {
@@ -14,6 +15,7 @@
     padding: 0;
     margin: 0;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .user-list li {
